# testflight-watcher

./: pyproject.toml  telegram_bot.py  testflight_watcher.py
